Fixed button style on mobile safari
Fixes #298

--- a/app/assets/stylesheets/general/_button.sass
+++ b/app/assets/stylesheets/general/_button.sass
@@ -9,6 +9,8 @@
   padding: 13px 25px
   text-align: center
   text-decoration: none
+  -webkit-appearance: none
+  border-radius: 0
   @include transition(200ms, all, ease-in-out, 0ms)
 
   &.small
